syntax = "proto3";

package code.chat.v1;

option go_package = "github.com/code-wallet/code-api/genproto/chat/v1;chat";
option java_package = "com.codeinc.gen.chat.v1";
option objc_class_prefix = "CPBChatV1";

import "common/v1/model.proto";
import "transaction/v2/transaction_service.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service Chat {
    // GetChats gets the set of chats for an owner account
    rpc GetChats(GetChatsRequest) returns (GetChatsResponse);

    // GetMessages gets the set of messages for a chat
    rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);

    // AdvancePointer advances a pointer in chat history
    rpc AdvancePointer(AdvancePointerRequest) returns (AdvancePointerResponse);

    // SetMuteState configures the mute state of a chat
    rpc SetMuteState(SetMuteStateRequest) returns (SetMuteStateResponse);

    // SetSubscriptionState configures the susbscription state of a chat
    rpc SetSubscriptionState(SetSubscriptionStateRequest) returns (SetSubscriptionStateResponse);
}

message GetChatsRequest {
    common.v1.SolanaAccountId owner = 1 [(validate.rules).message.required = true];

    common.v1.Signature signature = 2 [(validate.rules).message.required = true];

    uint32 page_size = 3 [(validate.rules).uint32.lte = 100];

    Cursor cursor = 4;

    Direction direction = 5;
    enum Direction {
        ASC  = 0;
        DESC = 1;
    }
}

message GetChatsResponse {
    Result result = 1;
    enum Result {
        OK = 0;
        NOT_FOUND = 1;
    }

    repeated ChatMetadata chats = 2 [(validate.rules).repeated = {
        min_items: 0
        max_items: 100
    }];
}

message GetMessagesRequest {
    ChatId chat_id = 1 [(validate.rules).message.required = true];

    common.v1.SolanaAccountId owner = 2 [(validate.rules).message.required = true];

    common.v1.Signature signature = 3 [(validate.rules).message.required = true];

    uint32 page_size = 4 [(validate.rules).uint32.lte = 100];

    Cursor cursor = 5;

    Direction direction = 6;
    enum Direction {
        ASC  = 0;
        DESC = 1;
    }
}

message GetMessagesResponse {
    Result result = 1;
    enum Result {
        OK = 0;
        NOT_FOUND = 1;
    }

    repeated ChatMessage messages = 2 [(validate.rules).repeated = {
        min_items: 0
        max_items: 100
    }];
}

message AdvancePointerRequest {
    ChatId chat_id = 1 [(validate.rules).message.required = true];

    Pointer pointer = 2 [(validate.rules).message.required = true];

    common.v1.SolanaAccountId owner = 3 [(validate.rules).message.required = true];

    common.v1.Signature signature = 4 [(validate.rules).message.required = true];
}

message AdvancePointerResponse {
    Result result = 1;
    enum Result {
        OK = 0;
        CHAT_NOT_FOUND = 1;
        MESSAGE_NOT_FOUND = 2;
    }
}

message SetMuteStateRequest {
    ChatId chat_id = 1 [(validate.rules).message.required = true];

    bool is_muted = 2;

    common.v1.SolanaAccountId owner = 3 [(validate.rules).message.required = true];

    common.v1.Signature signature = 4 [(validate.rules).message.required = true];
}

message SetMuteStateResponse {
    Result result = 1;
    enum Result {
        OK = 0;
        CHAT_NOT_FOUND = 1;
        CANT_MUTE = 2;
    }
}

message SetSubscriptionStateRequest {
    ChatId chat_id = 1 [(validate.rules).message.required = true];

    bool is_subscribed = 2;

    common.v1.SolanaAccountId owner = 3 [(validate.rules).message.required = true];

    common.v1.Signature signature = 4 [(validate.rules).message.required = true];
}

message SetSubscriptionStateResponse {
    Result result = 1;
    enum Result {
        OK = 0;
        CHAT_NOT_FOUND = 1;
        CANT_UNSUBSCRIBE = 2;
    }
}

message ChatId {
    bytes value = 1 [(validate.rules).bytes = {
        min_len: 32
        max_len: 32
    }];
}

message ChatMessageId {
    bytes value = 1 [(validate.rules).bytes = {
        min_len: 32
        max_len: 64
    }];
}

message Pointer {
    Kind kind = 1;
    enum Kind {
        UNKNOWN = 0;
        READ = 1;
    }

    ChatMessageId value = 2 [(validate.rules).message.required = true];
}

message ChatMetadata {
    ChatId chat_id = 1 [(validate.rules).message.required = true];

    // Recommended chat title inferred by the type of chat
    oneof title {
        option (validate.required) = true;

        LocalizedContent localized = 2;
        common.v1.Domain domain    = 3;
    }

    // Pointer in the chat indicating the most recently read message by the user
    Pointer read_pointer = 4;

    // Estimated number of unread messages in this chat
    uint32 num_unread = 5;

    // Has the user muted this chat?
    bool is_muted = 6;

    // Is the user subscribed to this chat?
    bool is_subscribed = 7;

    // Can the user mute this chat?
    bool can_mute = 8;

    // Can the user unsubscribe from this chat?
    bool can_unsubscribe = 9;

    // Cursor value for this chat for reference in subsequent GetChatsRequest 
    Cursor cursor = 10;

    // Is this a verified chat?
    //
    // Note: It's possible to have two chats with the same title, but with
    // different verification statuses. They should be treated separately.
    bool is_verified = 11;
}

message ChatMessage {
    // Unique ID for this message
    ChatMessageId message_id = 1 [(validate.rules).message.required = true];

    // Timestamp this message was generated at
    google.protobuf.Timestamp ts = 2 [(validate.rules).timestamp.required = true];

    // Ordered message content. A message may have more than one piece of content.
    repeated Content content = 3 [(validate.rules).repeated = {
        min_items: 1
        max_items: 10
    }];

    // Cursor value for this message for reference in subsequent GetMessagesRequest 
    Cursor cursor = 4;
}

message Content {
    oneof type {
        option (validate.required) = true;

        LocalizedContent        localized     = 1;
        ExchangeDataContent     exchange_data = 2;
        NaclBoxEncryptedContent nacl_box      = 3;
    }
}

message LocalizedContent {
    string key = 1 [(validate.rules).string = {
        min_len: 1
        max_len: 64
    }];
}

message ExchangeDataContent {
    Verb verb = 1;
    enum Verb {
        UNKNOWN   = 0;
        GAVE      = 1;
        RECEIVED  = 2;
        WITHDREW  = 3;
        DEPOSITED = 4;
        SENT      = 5;
        RETURNED  = 6;
        SPENT     = 7;
        PAID      = 8;
        PURCHASED = 9;
    }

    oneof exchange_data {
        option (validate.required) = true;

        transaction.v2.ExchangeData            exact = 2;
        transaction.v2.ExchangeDataWithoutRate partial = 3;
    }
}

message NaclBoxEncryptedContent {
    common.v1.SolanaAccountId peer_public_key = 1 [(validate.rules).message.required = true];

    bytes nonce = 2 [(validate.rules).bytes = {
        min_len: 24
        max_len: 24
    }];

    bytes encrypted_payload = 3 [(validate.rules).bytes = {
        min_len: 1
        max_len: 1024
    }];
}

// Opaque cursor used across paged APIs. Underlying bytes may change as paging
// strategies evolve.
message Cursor {
    bytes value = 1 [(validate.rules).bytes = {
        min_len: 8
        max_len: 64
    }];
}
